--- a/WorkSheet1/WorkSheet1/WorkSheet1.vcxproj.filters
+++ b/WorkSheet1/WorkSheet1/WorkSheet1.vcxproj.filters
@@ -24,5 +24,17 @@
     <ClCompile Include="Q3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q4.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q5.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q6.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q7.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
