--- a/WorkSheet2/WorkSheet2/WorkSheet2.vcxproj
+++ b/WorkSheet2/WorkSheet2/WorkSheet2.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{44B83291-752E-42DB-A9FE-5BC9EDE80EEC}</ProjectGuid>
+    <ProjectGuid>{503AD773-7495-44CC-9444-1503810EBC37}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>inputoutput</RootNamespace>
+    <RootNamespace>WorkSheet2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
-    <ProjectName>Worksheet1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ex1.c" />
+    <ClCompile Include="main.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
