--- a/Worksheet4/Worksheet4/Worksheet4.vcxproj
+++ b/Worksheet4/Worksheet4/Worksheet4.vcxproj
@@ -140,9 +140,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Q1.c" />
+    <ClCompile Include="Q10.c" />
     <ClCompile Include="Q2.c" />
     <ClCompile Include="Q3.c" />
     <ClCompile Include="Q4.c" />
+    <ClCompile Include="Q5.c" />
+    <ClCompile Include="Q6.c" />
+    <ClCompile Include="Q7.c" />
+    <ClCompile Include="Q8.c" />
+    <ClCompile Include="Q9.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
