--- a/Worksheet4/Worksheet4/Worksheet4.vcxproj.filters
+++ b/Worksheet4/Worksheet4/Worksheet4.vcxproj.filters
@@ -27,5 +27,23 @@
     <ClCompile Include="Q4.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q5.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q6.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q7.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q8.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q9.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q10.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
